# agnostic-multicloud-delivery-framework

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yml  publish-to-pypi.yml
docs/: index.md  requirements.txt
docs/cli/: generate-k8s.md  generate.md  guided.md  list-crds.md  list-k8s.md  mcp-server.md  overview.md  validate.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quick-start.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  kyverno-validation.md  mcp.md  policy-templates.md
examples/crossplane/configurations/configuration_network/apis/network/: composition.yaml
examples/crossplane/configurations/configuration_network/sample/: claim_xnetwork.yaml
examples/kro/rgd/basic_app/api/: main.k
examples/kro/rgd/basic_app/sample/: schema.yaml
src/amdf/: __init__.py
src/amdf/core/: config.py  exceptions.py  models.py  utils.py
src/amdf/core/logic/: blueprint.py  generator.py  k8s_generator.py  k8s_source.py  kyverno_policies.py  kyverno_translator.py  kyverno_validator.py  policy_scaffolder.py
src/amdf/interfaces/cli/: guided.py  main.py
src/amdf/interfaces/cli/commands/: __init__.py
src/amdf/interfaces/mcp/: __init__.py  server.py
